--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <meta http-equiv="refresh" content="0; url=src/main/resources/templates/index.html">
 </head>
 <body>
   <p>Redirecting to game...</p>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Test</title>
+</head>
+<body>
+  <h1>GitHub Pages is working ✅</h1>
 </body>
 </html>
